[gd_scene load_steps=17 format=3 uid="uid://gib0vewis1qh"]

[ext_resource type="Script" uid="uid://ds4v6bqi66g6f" path="res://scenes/gameplay/playfield/notes/normal_note.gd" id="1_31kjc"]
[ext_resource type="Texture2D" uid="uid://ctpnifbhsfdwu" path="res://assets/game/notetypes/rgb/hold/hold_line.png" id="2_hmkq5"]
[ext_resource type="SpriteFrames" path="res://assets/game/notetypes/funkin/splashes.res" id="2_xg47h"]
[ext_resource type="Texture2D" uid="uid://do56kimw6dns3" path="res://assets/game/notetypes/rgb/hold/tail_exterior.png" id="3_6uqhm"]
[ext_resource type="Texture2D" uid="uid://q6ar5akjn3g3" path="res://assets/game/notetypes/rgb/exterior.png" id="3_vawdo"]
[ext_resource type="Texture2D" uid="uid://u2g5xlw4uotk" path="res://assets/game/notetypes/rgb/interior.png" id="4_701c1"]
[ext_resource type="Texture2D" uid="uid://di0mp7foytxyl" path="res://assets/game/notetypes/rgb/hold/tail_highlight.png" id="4_hmkq5"]
[ext_resource type="Texture2D" uid="uid://bueqdbpjkud4c" path="res://assets/game/notetypes/rgb/interior-blur.png" id="5_6uqhm"]
[ext_resource type="Texture2D" uid="uid://cvneuhkf6tnny" path="res://assets/game/notetypes/rgb/highlight.png" id="6_hmkq5"]

[sub_resource type="Animation" id="Animation_fer4d"]
resource_name = "0"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exterior:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.282353, 0.176471, 0.376471, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("exterior/interior:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.760784, 0.294118, 0.6, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exterior:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("clip_rect/hold_tail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.235294, 0.121569, 0.337255, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("clip_rect/hold_body:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.760784, 0.294118, 0.6, 1)]
}

[sub_resource type="Animation" id="Animation_701c1"]
resource_name = "1"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exterior:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.4, 0.4, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("exterior/interior:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exterior:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("clip_rect/hold_tail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0823529, 0.258824, 0.717647, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("clip_rect/hold_body:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6uqhm"]
resource_name = "2"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exterior:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0392157, 0.266667, 0.278431, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("exterior/interior:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.071, 0.98, 0.02, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exterior:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("clip_rect/hold_tail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0392157, 0.266667, 0.278431, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("clip_rect/hold_body:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.071, 0.98, 0.02, 1)]
}

[sub_resource type="Animation" id="Animation_hmkq5"]
resource_name = "3"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exterior:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.396078, 0.0627451, 0.219608, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("exterior/interior:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.976471, 0.223529, 0.247059, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exterior:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("clip_rect/hold_tail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.396078, 0.0627451, 0.219608, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("clip_rect/hold_body:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.976471, 0.223529, 0.247059, 1)]
}

[sub_resource type="Animation" id="Animation_n6ltg"]
resource_name = "RESET"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exterior:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.282353, 0.176471, 0.376471, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("exterior/interior:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.760784, 0.294118, 0.6, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exterior:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("clip_rect/hold_tail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.235294, 0.121569, 0.337255, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("clip_rect/hold_body:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.760784, 0.294118, 0.6, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpqa0"]
_data = {
&"0": SubResource("Animation_fer4d"),
&"1": SubResource("Animation_701c1"),
&"2": SubResource("Animation_6uqhm"),
&"3": SubResource("Animation_hmkq5"),
&"RESET": SubResource("Animation_n6ltg")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hmkq5"]

[node name="normal" type="Node2D"]
script = ExtResource("1_31kjc")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lpqa0")
}

[node name="clip_rect" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.705882)
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -26.0
offset_right = 34.0
offset_bottom = 1800.0
metadata/_edit_lock_ = true

[node name="hold_body" type="Line2D" parent="clip_rect"]
self_modulate = Color(0.760784, 0.294118, 0.6, 1)
position = Vector2(27, 12)
points = PackedVector2Array(-20, 0, 0, 0, 20, 0, 0, 0, 0, 0)
width = 50.0
texture = ExtResource("2_hmkq5")

[node name="line_left" type="ColorRect" parent="clip_rect/hold_body"]
material = SubResource("CanvasItemMaterial_hmkq5")
offset_left = -21.0
offset_top = -12.0
offset_right = -18.0
offset_bottom = 16.0
scale = Vector2(0.947871, 1.31819)

[node name="line_right" type="ColorRect" parent="clip_rect/hold_body"]
material = SubResource("CanvasItemMaterial_hmkq5")
offset_left = 18.0
offset_top = -12.0
offset_right = 21.0
offset_bottom = 16.0
scale = Vector2(0.947871, 1.31819)

[node name="hold_tail" type="Sprite2D" parent="clip_rect"]
self_modulate = Color(0.235294, 0.121569, 0.337255, 1)
position = Vector2(26.375, 34)
scale = Vector2(1.04245, 1)
texture = ExtResource("3_6uqhm")
region_rect = Rect2(0, 0, 3, 0)

[node name="highlight" type="Sprite2D" parent="clip_rect/hold_tail"]
texture = ExtResource("4_hmkq5")
metadata/_edit_lock_ = true

[node name="exterior" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.282353, 0.176471, 0.376471, 1)
texture = ExtResource("3_vawdo")

[node name="interior" type="Sprite2D" parent="exterior"]
self_modulate = Color(0.760784, 0.294118, 0.6, 1)
position = Vector2(-1.5, 0.931807)
scale = Vector2(0.954545, 0.954545)
texture = ExtResource("4_701c1")

[node name="blur" type="Sprite2D" parent="exterior/interior"]
visible = false
position = Vector2(4.68888, -0.234495)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_6uqhm")

[node name="lightning" type="Sprite2D" parent="exterior"]
texture = ExtResource("6_hmkq5")

[node name="splash" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("2_xg47h")
animation = &"note impact 2 purple"
metadata/_edit_lock_ = true
